[project]
name = "rag-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "numpy>=2.0.2",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.27",
    "rich>=14.0.0",
]
